Revision history for Perl extension POE::Component::SSLify.

{{$NEXT}}

1.006
	Released: 2011-04-22 00:21:51 UTC

	Fix a heinous bug where openssl will randomly+reliably close a connection ( thanks MIRE )
	Tweak the hook tests so they test the case where no data is sent over the connection
	Tweak the connfail tests so they work better

1.005
	Released: 2011-03-10 07:55:30 UTC

	Fix the connfail tests due to an incorrect assumption regards socket close value, thanks CPANTesters!

1.004
	Released: 2011-03-08 23:39:03 UTC

	We now load certificate files via CTX_use_certificate_chain_file(), thanks Zephaniah E. Loss-Cutler-Hull <warp-spam_perl@aehallh.com>
		OpenSSL docs suggest it - http://www.openssl.org/docs/ssl/SSL_CTX_use_certificate.html#NOTES
		PLEASE yell at me if you need the old functionality - the docs suggest this is the "better" way to do it...
	Add the ability to pass a subref to call on connection/negotiation success, thanks Zephaniah E. Loss-Cutler-Hull <warp-spam_perl@aehallh.com>
		NOTE: This will not work if you do renegotiation or any other zany SSL stuff!
	Add the SSLify_GetStatus function to get the status of the connection
	After staring at the Net::SSLeay/OpenSSL docs for a while I realized we were missing support for sslv23 version, added!
	After some investigation, we now load all default ENGINEs for OpenSSL on startup, as it might provide a performance boost

1.003
	Released: 2011-02-28 15:52:24 UTC

	Add $IGNORE_SSL_ERRORS to ignore certain SSL errors, thanks MNUNBERG - RT#66130
	Remove prereq on vars.pm as it's obsolete

1.002
	Released: 2011-02-20 04:23:48 UTC

	Add SSLify_GetSSL to get the Net::SSLeay object, thanks MNUNBERG!

1.001
	Released: 2011-02-13 18:11:07 UTC

	Fixed the Net::SSLeay import code, thanks CPANTesters!

1.000
	Released: 2011-02-13 00:06:14 UTC

	Converted to Dist::Zilla for the release process!
	Add a test for in-situ sslification, thanks MNUNBERG!